--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>rolling</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <style type="text/css">
       body {
         padding: 0;
         margin: 0;
         height: 100vh;
+        width: 100vw;
+      }
+
+      .scroll {
+        position: relative;
+        height: 100vh;
+        width: 100vw;
+        overflow: scroll;
       }
 
       svg {
@@ -28,24 +36,29 @@
 
       .zoom-in, .zoom-out {
         position: fixed;
+        left: 20px;
         top: 20px;
-        right: 20px;
       }
 
       .zoom-out {
-        right: 50px;
+        left: 50px;
       }
     </style>
     <!--script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script-->
 </head>
 <body>
-  <svg id="canvas" width="100vw" height="100vh" viewBox="0 0 100 100"></svg>
+  <div class="scroll">
+    <svg id="canvas" width="100vw" height="100vh" viewBox="0 0 100 100"></svg>
+  </div>
   <button class="zoom-out" onClick="zoom(-25);">-</button>
   <button class="zoom-in" onClick="zoom(+25);">+</button>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script type="text/javascript">
       var circles = [];
-      var hammerOptions = {};
+      var hammerOptions = {
+        threshold: 0,
+        domEvents: true
+      };
       var radius = 2;
       var baseDistance = 17;
       var count = 10;
@@ -53,8 +66,8 @@
       var svg = document.getElementById("canvas");
 
       var setCircleDistance = function(circle, distance) {
-        console.log(distance);
-        circle.setAttribute('style', 'transform: rotate(' + circle.deg + 'deg) translateX(' + (distance) + 'px) rotate(-' + circle.deg + 'deg);');
+        circle.distance += distance;
+        circle.setAttribute('style', 'transform: rotate(' + circle.deg + 'deg) translateX(' + (circle.distance) + 'px) rotate(-' + circle.deg + 'deg);');
       }
 
       var addCircle = function(deg, color) {
@@ -65,7 +78,9 @@
         circle.setAttribute('r', radius);
         circle.setAttribute('fill', color);
         circle.deg = deg;
-        circle.setAttribute('style', 'transform: rotate(' + deg + 'deg) translateX(' + baseDistance  + 'px) rotate(-' + deg + 'deg);');
+        circle.distance = 0;
+        circle.factor = (Math.random() - 0.5);
+        setCircleDistance(circle, baseDistance);
         circles.push(circle);
         svg.appendChild(circle);
 
@@ -73,8 +88,14 @@
         hammer.on('pan', function(event) {
           var x = event.center.x - (svg.getBoundingClientRect().width / 2);
           var y = event.center.y - (svg.getBoundingClientRect().height / 2);
-          var distance = Math.pow((Math.pow(x, 2) + Math.pow(y, 2)), 0.5) * (1/6.2);
+          var distance = Math.pow((Math.pow(x, 2) + Math.pow(y, 2)), 0.5) * (1/6.2) - circle.distance;
           setCircleDistance(circle, distance);
+
+          for(let i = 0; i < circles.length; i++) {
+            if(circles[i] != circle) {
+              setCircleDistance(circles[i], distance  * circles[i].factor);
+            }
+          }
         });
       }
 
