add overlay + js fixes

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>rolling</title>
     <meta name="description" content="">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600" rel="stylesheet">
     <style type="text/css">
       body {
         padding: 0;
         margin: 0;
         height: 100vh;
         width: 100vw;
+        font-family: 'Open Sans', sans-serif;
       }
 
       .scroll {
@@ -23,7 +25,7 @@
 
       svg {
         position: absolute;
-        background: #eee;
+        background: #fefefe;
         top: 0;
         right: 0;
         bottom: 0;
@@ -33,12 +35,90 @@
       svg circle.ball {
         cursor: pointer;
       }
+
+      svg.open circle.ball {
+        opacity: 0.25;
+      }
+
+      #overlay {
+        position: fixed;
+        width: 50%;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background: #FFFFFF;
+        box-shadow: -5px 0 20px 0 rgba(0,0,0,0.10);
+        font-weight: 300;
+        padding: 50px;
+        box-sizing: border-box;
+        overflow: auto;
+        right: -50%;
+        opacity: 0;
+        transition: all 0.25s ease-out;
+      }
+
+      #overlay.open {
+        right: 0;
+        opacity: 1;
+      }
+
+      #overlay h2 {
+        color: #333;
+      }
+
+      #overlay p {
+        line-height: 200%;
+        color: #999;
+      }
+
+      #overlay .close {
+        display: block;
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        border: none;
+        background: none;
+        outline: none;
+        padding: 0;
+        cursor: pointer;
+      }
+
+      #overlay .close:before,
+      #overlay .close:after {
+        width: 2px;
+        background: #999;
+        display: block;
+        content: "";
+        position: absolute;
+        transform-origin: center center;
+        height: 30px;
+        transform: rotate(45deg);
+        left: 50%;
+        top: 50%;
+        margin: -15px -15px 0 0;
+      }
+
+      #overlay .close:after {
+        transform: rotate(-45deg);
+      }
+
     </style>
     <!--script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script-->
 </head>
 <body>
   <div class="scroll">
-    <svg id="canvas" width="100vw" height="100vh" viewBox="0 0 100 100"></svg>
+    <svg id="canvas" width="100%" height="100%" viewBox="0 0 100 100"></svg>
+  </div>
+  <div id="overlay">
+    <h2>Freier Hochschulzugang</h2>
+
+    <p>Bacon ipsum dolor amet ball tip ground round turkey flank tongue. Drumstick sausage meatloaf flank meatball. Jerky meatball ham, prosciutto bacon pancetta leberkas picanha andouille pork chop capicola chuck venison flank shankle. Meatloaf shankle bacon ribeye.</p>
+
+    <p>Tenderloin alcatra ball tip tail frankfurter chuck jowl leberkas. Spare ribs pork loin jowl ham hock bresaola flank short loin pork kevin corned beef tenderloin shoulder ham alcatra. Chicken beef landjaeger rump meatloaf kielbasa ball tip turducken. Venison turducken porchetta shankle, jerky pancetta filet mignon.</p>
+
+    <button onclick="closeOverlay();" class="close"></button>
   </div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script type="text/javascript">
@@ -75,9 +155,10 @@
       var circles = [];
       var radius = 2;
       var baseDistance = 17;
-      var count = 10;
+      var count = 8;
       var width = 100;
       var svg = document.getElementById("canvas");
+      var overlay = document.getElementById("overlay");
       var zoomedIn = false;
 
       var setCircleDistance = function(circle, distance) {
@@ -103,32 +184,42 @@
         hammer.add(new Hammer.Pan({threshold: 0, pointers: 0, domEvents: true}));
         hammer.add(new Hammer.Tap({}));
         hammer.on('pan', function(event) {
-          console.log(event);
+
+          if(zoomedIn) {
+            return;
+          }
+
           event.srcEvent.stopPropagation();
           event.srcEvent.preventDefault();
           event.preventDefault();
+          var svgB = svg.getBoundingClientRect();
 
-          var x = event.center.x - (svg.getBoundingClientRect().width / 2);
-          var y = event.center.y - (svg.getBoundingClientRect().height / 2);
+          var x = event.center.x - (svgB.width / 2);
+          var y = event.center.y - (svgB.height / 2);
           var distance = Math.pow((Math.pow(x, 2) + Math.pow(y, 2)), 0.5) * (1/6.2) - circle.distance;
-          setCircleDistance(circle, distance);
+
+          if(isNotInCenter(circle, svgB, distance)) {
+            setCircleDistance(circle, distance);
+          }
 
           for(let i = 0; i < circles.length; i++) {
             if(circles[i] != circle) {
-              setCircleDistance(circles[i], distance  * circles[i].factor);
+              if(isNotInCenter(circles[i], svgB, distance  * circles[i].factor)) {
+                setCircleDistance(circles[i], distance  * circles[i].factor);
+              }
             }
           }
         });
 
         hammer.on('tap', function(event){
           if(zoomedIn) {
-            zoomedIn = false;
-            zoomOut(0);
+            closeOverlay();
           } else {
             zoomedIn = true;
             var scroll = document.getElementsByClassName('scroll')[0];
             var b1 = scroll.getBoundingClientRect();
             zoomIn(circle, 0, b1.width/4);
+            openOverlay(circle.getAttribute('fill'));
           }
         });
       }
@@ -140,6 +231,7 @@
             var bound = circle.getBoundingClientRect();
             scroll(bound.left, bound.top, shiftLeft, 0);
             zoomIn(circle, level+1, shiftLeft);
+            circle.style.opacity = 1;
           }, 1);
         }
       }
@@ -149,15 +241,45 @@
           setTimeout(function(){
             zoom(EasingFunctions.easeOutQuad(level/30) * -5);
             zoomOut(level+1);
+            for(let i = 0; i < circles.length; i++) {
+              circles[i].style.opacity = "";
+            }
           }, 1);
         }
+      }
+
+      var isNotInCenter = function(circle, svg, distance) {
+        var padding = 30;
+        var top = (svg.height / 2) - padding;
+        var bottom = (svg.height / 2) + padding;
+        var left = (svg.width / 2) - padding;
+        var right = (svg.width / 2) + padding;
+
+        var atop = (svg.height / 2);
+        var abottom = (svg.height / 2);
+        var aleft = (svg.width / 2);
+        var aright = (svg.width / 2);
+
+        var cb = circle.getBoundingClientRect();
+        var x = cb.left + cb.width / 2;
+        var y = cb.top + cb.height / 2;
+
+        if((x > left && x < right && y > top && y < bottom) && distance > circle.distance) {
+          return true;
+        }
+
+        if(x > left && x < right && y > top && y < bottom) {
+          return false;
+        }
+
+        return true;
       }
 
       var zoom = function(level) {
         if((width + level) >= 100 && (width + level) <= 300) {
           width += level;
-          svg.setAttribute('width', width + 'vw');
-          svg.setAttribute('height', width + 'vh');
+          svg.setAttribute('width', width * 2 + '%');
+          svg.setAttribute('height', width * 1.5 + '%');
         }
       }
 
@@ -177,18 +299,29 @@
         return color;
       }
 
+      var openOverlay = function(color) {
+        overlay.classList.add('open');
+        overlay.getElementsByTagName('h2')[0].style.color = color;
+        svg.classList.add('open');
+      }
+
+      var closeOverlay = function() {
+        overlay.classList.remove('open');
+        svg.classList.remove('open');
+        zoomedIn = false;
+        zoomOut(0);
+      }
+
 
       window.onload = function(){
-        for(var i = 0; i <= 10; i++) {
-          var circle = document.createElementNS("http://www.w3.org/2000/svg", "circle");
+        var circle = document.createElementNS("http://www.w3.org/2000/svg", "circle");
           circle.setAttribute('cx', width/2);
           circle.setAttribute('cy', width/2);
-          circle.setAttribute('r', Math.pow((i + 0.5), 2.25));
-          circle.setAttribute('fill', 'none');
-          circle.setAttribute('stroke', '#DDD');
-          circle.setAttribute('stroke-width', 0.25);
+          circle.setAttribute('r', 1);
+          circle.setAttribute('fill', '#efefef');
+          circle.setAttribute('stroke', '#dedede');
+          circle.setAttribute('stroke-width', 0.10);
           svg.appendChild(circle);
-        }
 
         for(var i = 0; i <= count; i++) {
           addCircle(i * (360/(count+1)), getRandomColor());
